edits to chapter 6

--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -1,13 +1,13 @@
 \section{0{\nbb} decay vs $^{10}$C background}
 
 Other common backgrounds to 0{\nbb} decay search include radioactive
-decays of nuclei excited by cosmic muons and decays of Th and U
-naturally present in the materials. In a liquid scintillator detectors
-most of events from Th and U decays are happening in the materials of
-the scintillator enclosure. Typically they enter the fiducial volume
-as 2.6~MeV gammas. These gammas either shower too late or have
+decays of nuclei that are excited by cosmic muons and produced through the decays of Th and U
+naturally present in the materials. In liquid scintillator detectors,
+most of events from Th and U decays occur in the materials of
+the scintillator enclosure. Typically, they enter the fiducial volume
+as 2.6~MeV gammas. These gammas pass into the fiducial volume either because they showered too late or have
 mis-reconstructed vertex. Both effects depend on details of a
-particular experiment and therefore in this paper we make no attempt
+particular experiment and in this paper we make no attempt
 to introduce a topology reconstruction for the backgrounds coming from
 Th and U lines. Cosmic induced backgrounds, to the contrary, are more
 generic and originate inside the fiducial volume. In this section we
@@ -18,8 +18,6 @@ Typical energy deposition by $^{10}$C events is shown in
 Fig.~\ref{fig:Edep_C10}. We propose to use spherical harmonics
 analysis to separate 0{\nbb} decay events from $^{10}$C events that
 within energy resolution overlap with the 0{\nbb} decay Q-value.
-
-
 
 \begin{figure}[h]
   \centering
@@ -47,12 +45,12 @@ within energy resolution overlap with the 0{\nbb} decay Q-value.
 \end{figure}
 
 We note that 98\% of $^{10}$C decays through the excited state of
-$^{10}$B(718) that has a half-life time of $\sim$1~ns. Therefore
+$^{10}$B(718), which has a half-life time of $\sim$1~ns. Therefore, the
 majority of $^{10}$C events have a prompt positron accompanied by a
-delayed 0.718~MeV gamma. This delayed gamma affects PEs arrival time
-distribution. Figure~\ref{fig:Arrival_time_C10} shows shape comparison
-of PEs arrival time distribution between $^{130}$Te 0{\nbb} decay and
-$^{10}$C events. Time profile of the scintillation photons can be used
+delayed 0.718~MeV gamma. This delayed gamma affects the PE arrival time
+distribution. Figure~\ref{fig:Arrival_time_C10} compares the shape of the
+PE arrival time distribution between $^{130}$Te 0{\nbb} decays and
+$^{10}$C events. The time profile of the scintillation photons can be used
 to separate signal from $^{10}$C events.
 
 
@@ -82,6 +80,7 @@ the center of the detector. True vertex position is used to apply a
 33.5~ns time cut to select photons for the spherical harmonics
 analysis. The separation is seen in S0 vs S1 and S2 vs S3 scatter
 plots. We project both scatter plots to a line that gives maximum
-separation (two bottom panels in Fig.~\ref{fig:SL_C10_33p5ns_center}).
+separation (two bottom panels in Fig.~\ref{fig:SL_C10_33p5ns_center}).  
+There is enough separation between the distributions to suggest that this analysis can be used to distinguish between 0{\nbb} and $^{10}$C events.
 
 %\section{0{\nbb} decay vs backgrounds from Th and U series}
