Partial update in response to comments

--- a/SphericalHarmonicsPaper/NIMA/bibliography.bib
+++ b/SphericalHarmonicsPaper/NIMA/bibliography.bib
@@ -770,15 +770,17 @@ keywords = "Analog bandwidth",
 keywords = "Large-area detector "
 }
 
-
-
-
-@unpublished{PSEC4_paper,
-  title        = "{ A 15 GSa/s, 1.5 GHz Bandwidth Waveform Digitizing ASIC}",
-  author       = {Oberla, E. and Genat, J. and Grabas, H. and Frisch, H. and Nishimura, K. and Varner, G.},
-  year         = {2013},
-  note         = {submitted to Nucl. Instrum. Meth. A}
+@article{PSEC4_paper,
+      author         = "{Oberla, E. and Genat, J. and Grabas, H. and Frisch, H. and Nishimura, K. and Varner, G.}",
+      title          = "{A 15 GSa/s, 1.5 GHz Bandwidth Waveform Digitizing ASIC}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A735",
+      pages          = "452-461",
+      doi            = "doi:10.1016/j.nima.2013.09.042",
+      year           = "2014",
+      SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
 }
+
 
 @article{RSI_paper,
 author = {Bernhard Adams and others},
@@ -794,7 +796,7 @@ url = {http://link.aip.org/link/?RSI/84/061301/1},
 doi = {10.1063/1.4810018}
 }
 
-@article{Adams:2013nva,
+@article{Vienna2013,
       author         = "Adams, Bernhard and others",
       title          = "{Measurements of the gain, time resolution, and spatial resolution of a 20x20cm$^2$ MCP-based picosecond
                         photo-detector}",
@@ -805,6 +807,54 @@ doi = {10.1063/1.4810018}
       year           = "2013",
       SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
 }
+
+@article{Ceramic_paper1,
+      author         = "Seigmund, Oswald and others",
+      title          = "{Large area event counting detectors with high spatial and temporal resolution}",
+  journal={J.~Instrum.},
+  volume={9},
+  number={06},
+  pages={C04002},
+      year           = "2014",
+      SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
+}
+
+@article{HV_paper,
+      author         = "Adams, Bernhard and others",
+      title          = "{An internalALD-basedhighvoltagedividerandsignalcircuit
+for MCP-basedphotodetectors}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A780",
+      pages          = "107-113",
+      doi            = "doi:10.1016/j.nima.2015.01.034",
+      year           = "2015",
+      SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
+}
+
+
+@article{Timing_paper,
+      author         = "Adams, Bernhard and others",
+      title          = "{Timing characteristics of Large Area Picosecond Photodetectors}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A795",
+      pages          = "1-11",
+      doi            = "doi:10.1016/j.nima.2015.05.027",
+      year           = "2015",
+      SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
+}
+
+@article{Incom_paper,
+      author         = "Minot, Michael and others",
+      title          = "{Pilot production \& commercialization of LAPPD\textsuperscript{\tiny{TM}}}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A787",
+      pages          = "78-84",
+      doi            = "doi:10.1016/j.nima.2014.11.025",
+      year           = "2015",
+      SLACcitation   = "%%CITATION = NUIMA,A732,392;%%",
+}
+
+
 
 @unpublished{zr1,
   title        = "{Development of liquid scintillator containing a zirconium complex for neutrinoless double beta decay experiment}",
@@ -962,22 +1012,7 @@ note="{http://www.hamamatsu.com/resources/pdf/etd/R3809U-61-63-64\_TPMH1295E04.p
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.109.032505},
   publisher = {American Physical Society}
 }
-%GERDA
-@article{gerda2013,
-      author         = "Agostini, M. and others",
-      title          = "{Results on neutrinoless double beta decay of 76Ge from
-                        GERDA Phase I}",
-      collaboration  = "GERDA",
-      journal        = "Phys.Rev.Lett.",
-      volume         = "111",
-      pages          = "122503",
-      doi            = "10.1103/PhysRevLett.111.122503",
-      year           = "2013",
-      eprint         = "1307.4720",
-      archivePrefix  = "arXiv",
-      primaryClass   = "nucl-ex",
-      SLACcitation   = "%%CITATION = ARXIV:1307.4720;%%",
-}
+
 
 %New Phys.
 @article{newphysics0nuBB,
