--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -10,8 +10,7 @@
 %\doublespacing
 \setstretch{1.5}
 
-\title{Separating double-beta decay events from solar neutrino
-  interactions in kiloton-scale liquid scintillator detectors}
+\title{Separating Double-Beta Decay Events from Background in a Kiloton-Scale Directional Liquid Scintillator Detector}
 \input{authors}
 
 \begin{abstract}
@@ -53,7 +52,8 @@
     bin.}
   \label{fig:Kinematics}
 \end{figure*}
-26976
+%26976
+
 \input{20-LiquidScintillatorDetector}
 \clearpage %These are only needed to force correct placement of the
            %figures while there is no text
