--- a/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
+++ b/SphericalHarmonicsPaper/NIMA/20-LiquidScintillatorDetector.tex
@@ -56,9 +56,7 @@ The fourth effect determining the timing in a scintillator detector is the timin
 affected by the transit-time spread (TTS) of the photodetectors, a
 number which can be different by orders of magnitude depending on the
 detector type. We use a TTS of 0.1~ns ($\sigma$), which can be achieved with large area picosecond photodetectors
-(LAPPDs)\cite{Adams:2013nva,RSI_paper,PSEC4_paper,anode_paper} and possibly hybrid photodetectors
-(HPDs)\cite{hpdThesis}; even significantly lower TTS numbers are
-realistic with the LAPPD\cite{RSI_paper,PSEC4_paper,anode_paper}.
+(LAPPDs)\cite{anode_paper,PSEC4_paper,RSI_paper,Vienna2013,Ceramic_paper1,HV_paper,Timing_paper,Incom_paper}.
 
 The primary quantities provided by the Geant4~simulation are the photoelectron hit
 positions and the detection times after the TTS resolution has been
