--- a/SphericalHarmonicsPaper/NIMA/abstract.tex
+++ b/SphericalHarmonicsPaper/NIMA/abstract.tex
@@ -1,6 +1,6 @@
 We propose a technique for separating 0{\nbb}-decay events from
-background due to $^8$B solar neutrino interactions in a liquid
-scintillator detector. The technique compares event topology of the
+background due to $^10$C decays and $^8$B solar neutrino interactions in a liquid
+scintillator detector. These represent the key backgrounds at shallow and deep sites. The technique compares event topology of the
 signal and background events using spherical harmonics analysis of the
 early light emitted in 0{\nbb}-decay and $^8$B events. Selection of
 early photons using fast photo-detectors allows for separation of
