added KamLAND bkgs

--- a/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
+++ b/SphericalHarmonicsPaper/NIMA/spherical_paper.tex
@@ -38,6 +38,16 @@
   \label{fig:SNOp_bkgs}
 \end{figure}
 
+
+
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.49\columnwidth]{Combined-0nu-R135cm.pdf}
+  \includegraphics[width=0.49\columnwidth]{spectrum_plot_200_stack_nosums_nodata_inset_200mev.pdf}
+   \caption{ Plot taken from~\cite{SNOp_paper}}
+  \label{fig:SNOp_and_KamLAND_bkgs}
+\end{figure}
+
 \begin{figure*}[ht]
   \centering
   \includegraphics[width=0.49\textwidth]{hCos_Te130.pdf}
