Changed Jon's affiliation in authorlist. Removed PDF from being tracked. Beginning to add citations to bibliography.

--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -1,11 +1,13 @@
 \author[UChicago]{Andrey Elagin\corref{cor1}}
 \cortext[cor1]{Corresponding Author: \href{mailto:elagin@hep.uchicago.edu}{\tt{elagin@hep.uchicago.edu}}}
 \author[UChicago]{Henry J. Frisch}
-\author[MIT]{Jonathan Ouellet}
+\author[MIT,LBL]{Jonathan Ouellet}
 \author[MIT]{Lindley Winslow}
 \author[OPTIN]{{\bf Opt in}}
 
 
 \address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
+\address[LBL]{ Nuclear Science Division, Lawrence Berkeley National Labo\
+ratory, Berkeley, CA 94720 }
 \address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
