--- a/SphericalHarmonicsPaper/NIMA/bibliography.bib
+++ b/SphericalHarmonicsPaper/NIMA/bibliography.bib
@@ -963,7 +963,7 @@ note="{http://www.hamamatsu.com/resources/pdf/etd/R3809U-61-63-64\_TPMH1295E04.p
   publisher = {American Physical Society}
 }
 %GERDA
-@article{gerda2013,
+@article{gerda2013two,
       author         = "Agostini, M. and others",
       title          = "{Results on neutrinoless double beta decay of 76Ge from
                         GERDA Phase I}",
@@ -1021,3 +1021,45 @@ url = "http://www.sciencedirect.com/science/article/pii/0370269386911263",
 author = "M. Fukugita and T. Yanagida"
 }
 
+@article{Feinberg1959,
+    author = {Feinberg, G. and Goldhaber, M},
+   journal = {Proc.~Nat.~Ac.~Sci.},
+      year = {1959},
+    volume = {45},
+     pages = {1301},
+}
+@article{Pontecorvo1968,
+      author         = "Pontecorvo, B.",
+      COMtitle          = "{Neutrino Experiments and the Problem of Conservation of Leptonic Charge}",
+      journal        = "Sov.~Phys.~JETP",
+      volume         = "26",
+      COMpages          = "984-988",
+      pages          = "984",
+      year           = "1968",
+}
+@article{Furry1939,
+  title = {On Transition Probabilities in Double Beta-Disintegration},
+  author = {Furry, W. H.},
+  journal = {Phys.~Rev.},
+  volume = {56},
+  issue = {12},
+  pages = {1184--1193},
+  numpages = {0},
+  year = {1939},
+  month = {Dec},
+  publisher = {American Physical Society},
+  OPTdoi = {10.1103/PhysRev.56.1184},
+  OPTurl = {http://link.aps.org/doi/10.1103/PhysRev.56.1184}
+}
+@article{Pas2015,
+      author         = "P\:{a}s, Heinrich and Rodejohann, Werner",
+      title          = "{Neutrinoless Double Beta Decay}",
+      journal        = "New~J.~Phys.",
+      volume         = "17",
+      year           = "2015",
+      number         = "11",
+      pages          = "115010",
+      doi            = "10.1088/1367-2630/17/11/115010",
+      eprint         = "1507.00170",
+      archivePrefix  = "arXiv",
+}
