--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -8,6 +8,5 @@
 
 \address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
-\address[LBL]{ Nuclear Science Division, Lawrence Berkeley National Labo\
-ratory, Berkeley, CA 94720 }
+\address[LBL]{ Nuclear Science Division, Lawrence Berkeley National Laboratory, Berkeley, CA 94720 }
 \address[OPTIN]{{\bf Please opt-in if you think you should be on the author list}}
