Edits to the introduction. Added references to the bibliography.

--- a/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
+++ b/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
@@ -1,88 +1,104 @@
 \section{Introduction}
 
-Over the past decade, neutrino oscillation experiments have
-conclusively established that neutrinos have mass. However, one of the
-most fundamental and still open questions in particle physics is the
-nature of that mass. Is the neutrino unique in the Standard Model with
-a Majorana type mass, as is predicted by most theoretical arguments,
-or does it have a Dirac type mass, like the rest of the fermions in
-the Standard Model? A Majorana mass would have far reaching
-implications, from explaining the lightness of the neutrino and
-providing a bridge to higher energy phenomena through the see-saw
-mechanism [CITATION] to providing the required lepton-number violation
-(LNV) and {\sf CP}-violation needed for leptogenesis to explain the
-baryon asymmetry of the universe \cite{Luty1992}. Conversely, a Dirac
-neutrino could point to an underlying symmetry of the Universe.
-Presently, the most promising technique for answering these questions
-is the search for Neutrinoless Double-Beta (0\nbb) decay
-[CITATION]. In this decay, a nucleus undergoes a second order
-$\beta$-decay without producing any neutrinos,
-$(Z,A)\rightarrow(Z+2,A)+2\beta^-$. The resulting decay products are
-ejected with a total kinetic energy equal to the decay $Q$-value, and
-most of this is carried by the electrons which have typical kinetic
-energies of $\sim$1--2~MeV.
+Over the past decade and a half, neutrino oscillation experiments have
+been able to conclusively establish that neutrinos have mass
+\cite{SNO2001,SNO2002,SuperK2002,kamland2003}. However, the nature of
+that mass remains one of the most fundamental open questions in
+particle physics. Is the neutrino unique among the Standard Model
+fermions with a Majorana-type mass \cite{Majorana1937}, as is
+predicted by most beyond the standard model (BSM) theories, or does it
+have a Dirac-type mass like the rest of the fermions? A Majorana-type
+mass would have far reaching implications, from explaining the
+lightness of the neutrino and providing a bridge to higher energy
+phenomena through the see-saw mechanism
+\cite{GellMann1980,Yanagida1979} to being able to provide the required
+lepton-number violation (LNV) and {\sf CP}-violation needed for
+leptogenesis to explain the baryon asymmetry of the universe
+\cite{Fukugita1986,Luty1992}. Conversely, a Dirac-type neutrino mass
+could point to an underlying symmetry of the Universe.  Presently, the
+most promising technique for answering these questions is the search
+for Neutrinoless Double-Beta (0\nbb) decay \cite{Furry1939}. In this
+decay, a nucleus undergoes a second order $\beta$-decay without
+producing any neutrinos, $(Z,A)\rightarrow(Z+2,A)+2\beta^-$. 
 
-The standard mechanism of 0{\nbb} decay is parameterized by the
-\emph{effective Majorana mass},
+Recently, this search has generated a significant amount of
+experimental interest, with the largest on-going experiments searching
+for {0\nbb} decay of $^{76}$Ge \cite{GERDA2013}, $^{130}$Te
+\cite{CUORE2015,CUORE2016} and $^{136}$Xe
+\cite{EXO2014,KamLANDZen2013}. At present, 0{\nbb} decay has never
+been convincingly observed, but present limits indicate that the
+half-lives are longer than $10^{23}-10^{25}\,\mathrm{yr}$ in the
+isotopes studied. The standard mechanism of 0{\nbb} decay is
+parameterized by the \emph{effective Majorana mass}, defined as
 \mbox{$m_{\beta\beta}\equiv\left|\sum_i U^2_{ei}m_i\right|$}, where
 $U_{ei}$ are the elements of the PMNS matrix and $m_i$ are the
-neutrino masses [CITATION].  Recently, this search has generated a
-significant amount of experimental interest, with current experiments
-searching for 0\nbb decay of $^{76}$Ge \cite{GERDA2013}, $^{130}$Te
-\cite{CUORE2015} and $^{136}$Xe \cite{EXO2014,KamLANDZen2013}. At
-present, 0{\nbb} decay has never been convincingly observed, but
-limits place the half-lives at longer than $10^{23}$--$10^{25}$~yr in
-the isotopes studied. These limits translate to a limit on
-\mbox{$m_{\beta\beta}\lesssim 150$--$700$~meV}, with the majority of
-the spread on this limit coming from uncertainty in the nuclear
-modeling. The next generation of 0{\nbb} decay experiments seek to be
-sensitive enough to detect or rule out 0{\nbb} decay down to
-\mbox{$m_{\beta\beta}<10$~meV}. This will require, among other things,
-$\sim$a ton of active isotope, a good energy resolution, and a near
-zero background in the region of interest (ROI) [CITATION?].
+neutrino masses. Current half-life limits translate to a limit on
+\mbox{$m_{\beta\beta}\lesssim 150-700\,\mathrm{meV}$}. The majority of
+the spread on this bound comes from theoretical uncertainty in the
+nuclear modeling (see \cite{Vogel2012} for a review). The next
+generation of 0{\nbb} decay experiments seek to be sensitive enough to
+detect or rule out 0{\nbb} decay down to \mbox{$m_{\beta\beta}\lesssim
+  10$~meV}. This will require a detector to instrument roughly a ton
+of active isotope, maintain a good energy resolution, and achieve a
+near zero background in the region of interest (ROI) over the course
+of the experiment \cite{Cremonesi2013} [Second CITATION?].
 
 Over the past few years, liquid scintillator-based detectors have
 proven to be a competitive technology in this search
-[CITATION?]. Their primary advantage is in their scalability to larger
-active masses, which entails disolving larger amounts of active
-isotope into the liquid scintillator (LS). This feature allows for
-rapid scaling to the 1~ton or more of active isotope. In a large LS
-detector, where backgrounds from the outside of the detector can be
-efficiently self-shielded or tagged and vetoed, the two backgrounds
-relavent to 0{\nbb} decay are 2{\nbb} and electron scattering (ES) interactions of $^{8}$B solar neutrinos.
+[CITATION?]. Their primary advantage is their ease of scalability to
+larger instrumented masses, which involves disolving larger amounts of
+the isotope of interest into the liquid scintillator (LS). This
+feature can allow for rapid scaling to 1~ton or more using the
+detectors already in operation \cite{Biller2013}. In a large LS
+detector, most backgrounds can be strongly suppressed through a
+combination of filtration of the LS to remove internal contaminents,
+self-shielding to minimize the effects of external contaminents, and
+vetoing to reduce cosmic ray effects. The backgrounds relevant to
+0{\nbb} decay which cannot be reduced through these means are the
+2{\nbb} decay and electron scattering of $^8$B solar neutrinos.
 
-Two neutrino double beta (2{\nbb}) decay is the Standard Model allowed
-second order $\beta$-decay channel where lepton number is conserved,
+Since 0{\nbb} decay produces no neutrinos, the full energy of the
+decay is contained within the detector and the observed spectrum of
+this decay is a peak around the decay $Q$-value. Most of this energy
+is carried by the electrons which have typical kinetic energies of
+$\sim1-2\,\mathrm{MeV}$ each. Two neutrino double beta (2{\nbb}) decay
+\cite{GoeppertMayer1935} is the Standard Model allowed second order
+$\beta$-decay channel where lepton number is conserved by the
+production of two anti-neutrinos,
 \mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}. Since the kinetic
-energy of the neutrinos is practically never detected, the resulting
-2{\nbb} spectrum is broadened from 0~MeV up to the decay
-$Q$-value. The high energy tail of this spectrum forms a background
-for the 0{\nbb} signal. Since it is intrinsic to the target isotope
-and the decay kinematics are nearly identical to 0{\nbb} decay,
-2{\nbb} can only be separated from 0{\nbb} with a detector with
-powerful enough resolution (see Fig.~\ref{fig:SNOp_bkgs}). Present
-LS-based detectors achieve typical energy resolutions of
-\mbox{$\sigma(E)\sim 5\%/\sqrt{E(\rm MeV)}$}. The next generation of
-detectors will improve up this... \JOcom{Something about
-  photo-coverage (etc). Eventually this will fold back in the question
-  of slowing down the scintillation signal and improving the Cherenkov
-  signal at the cost of decreasing the total light yield.}
-  
+energy of the neutrinos is practically never detected, the energy
+spectrum measured from 2{\nbb} decay is broadened from 0~MeV up to the
+decay $Q$-value. Because it is intrinsic to the target isotope, the
+high energy tail of the 2{\nbb} spectrum forms an irreducible
+background to the 0{\nbb} signal. The only way to distinguish the two
+is through a shape analysis of the resulting decay spectrum. This
+requires a detector with a good energy resolution (see
+Fig.~\ref{fig:SNOp_bkgs}). Present LS-based detectors achieve typical
+energy resolutions of \mbox{$\sigma(E)\sim 5\%/\sqrt{E(\rm
+    MeV)}$}. The next generation of detectors will seek to improve
+upon this by increasing both the photo-covering of the detector and
+light yield of the LS. \JOcom{Eventually this will fold back in the
+  question of slowing down the scintillation signal and improving the
+  Cherenkov signal at the cost of decreasing the total light yield.}
   
 The spectrum of ES interactions of $^{8}$B solar neutrinos falls
-slowly over the range 2--3~MeV, creating a nearly flat background
-across the 0{\nbb} ROI. However, these interactions produce only a
-single $\sim$2.5~MeV electron, rather than two $\sim$1.2~MeV electrons
-as in 0{\nbb}. In a LS, this difference in event topology manifests as
-two distinct distributions of Cherenkov photons, and thus creates a
-way to tag and remove these $^{8}$B solar neutrino events. As we have
-shown in previous works, photo-detectors with timing resolution of
+slowly over the range $2-3\,\mathrm{MeV}$, creating a nearly flat
+background across the ROI and reducing the sensitivity to 0{\nbb}. In
+this energy region, these interactions produce only a single
+$\sim$2.5~MeV electron, rather than two $\sim$1.2~MeV electrons as in
+0{\nbb}. In a LS, this difference in event topology manifests as two
+distinct distributions of Cherenkov photons, and thus creates a way to
+tag and remove these $^{8}$B solar neutrino events. As we have shown
+in previous works, photo-detectors with timing resolution of
 $\sim$100~ps can resolve the prompt Cherenkov photons from the slower
 scintillation signal \cite{Aberle2014}. The challenge is that for a
-given event, we expect XXX Cherenkov photons with which to reconstruct
-the event topology.
+given event, we expect $\sim$100 Cherenkov photons with which to
+reconstruct the event topology. \JOcom{It would be good to say
+  something like: In a SNO/KamLAND sized detector, we expect $\sim$50
+  $^{8}$B events, so our rejection needs to be at least this good. But
+  perhaps we say that later?}
 
-In this paper, we proposed to use a spherical harmonic decomposition
+In this paper, we propose to use a spherical harmonic decomposition
 to analyze the distribution of early photo-electrons (PE) to
 discriminate between $^{8}$B solar neutrinos and 0{\nbb} decay
 events. In Section~\ref{sec:detector_description}, we describe the
