--- a/SphericalHarmonicsPaper/NIMA/bibliography.bib
+++ b/SphericalHarmonicsPaper/NIMA/bibliography.bib
@@ -47,6 +47,16 @@
       COMdoi            = "10.1103/PhysRevLett.115.102502",
       COMeprint         = "1504.02454",
 }
+@article{CUORE2016,
+      author         = "Alduino, C. and others",
+      COMtitle          = "{Analysis Techniques for the Evaluation of the
+                        Neutrinoless Double-Beta Decay Lifetime in $^{130}$Te with CUORE-0}",
+      collaboration  = "CUORE",
+      year           = "2016",
+      eprint         = "1601.01334",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+}
 @article{Aberle2014,
   author={Aberle, C. and Elagin, A. and Frisch, H. J. and Wetstein,
                   M. and Winslow, L.},
@@ -156,21 +166,6 @@ note = "{http://www.geant4.org/geant4/collaboration/working\_groups/electromagne
       SLACcitation   = "%%CITATION = ARXIV:1211.3863;%%",
 }
 
-@article{kamland2003,
-      author         = "Eguchi, K. and others",
-      title          = "{First results from KamLAND: Evidence for reactor
-                        anti-neutrino disappearance}",
-      collaboration  = "KamLAND",
-      journal        = "Phys. Rev. Lett.",
-      volume         = "90",
-      pages          = "021802",
-      doi            = "10.1103/PhysRevLett.90.021802",
-      year           = "2003",
-      eprint         = "hep-ex/0212021",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ex",
-      SLACcitation   = "%%CITATION = HEP-EX/0212021;%%",
-}
 
 @article{kume_1983,
       author         = "Kume, H. and others",
@@ -1056,9 +1051,9 @@ publisher="Cambridge University Press"
 %
 %Leptogeneisis.
 %
-@article{leptogenesis,
+@article{Fukugita1986,
 title = "Barygenesis without grand unification ",
-journal = "Physics Letters B ",
+journal = "Phys.~Lett.~B",
 volume = "174",
 number = "1",
 pages = "45 - 47",
@@ -1087,7 +1082,7 @@ author = "M. Fukugita and T. Yanagida"
       year           = "1968",
 }
 @article{Furry1939,
-  title = {On Transition Probabilities in Double Beta-Disintegration},
+  COMtitle = {On Transition Probabilities in Double Beta-Disintegration},
   author = {Furry, W. H.},
   journal = {Phys.~Rev.},
   volume = {56},
@@ -1111,4 +1106,148 @@ author = "M. Fukugita and T. Yanagida"
       doi            = "10.1088/1367-2630/17/11/115010",
       eprint         = "1507.00170",
       archivePrefix  = "arXiv",
+}
+@article{Majorana1937,
+      author         = "Majorana, Ettore",
+      COMtitle          = "{Theory of the Symmetry of Electrons and Positrons}",
+      journal        = "Nuovo~Cim.",
+      volume         = "14",
+      year           = "1937",
+      pages          = "171-184",
+      doi            = "10.1007/BF02961314",
+      reportNumber   = "RX-888",
+      SLACcitation   = "%%CITATION = NUCIA,14,171;%%"
+}
+@article{GoeppertMayer1935,
+      author         = "Goeppert-Mayer, M.",
+      COMtitle          = "{Double beta-disintegration}",
+      journal        = "Phys.~Rev.",
+      volume         = "48",
+      year           = "1935",
+      pages          = "512-516",
+      doi            = "10.1103/PhysRev.48.512",
+      SLACcitation   = "%%CITATION = PHRVA,48,512;%%"
+}
+@article{Vogel2012,
+      author         = "Vogel, Petr",
+      COMtitle          = "{Nuclear structure and double beta decay}",
+      journal        = "J. Phys.",
+      volume         = "G39",
+      year           = "2012",
+      pages          = "124002",
+      doi            = "10.1088/0954-3899/39/12/124002",
+      eprint         = "1208.1992",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1208.1992;%%"
+}
+@article{GellMann1980,
+      author         = "Gell-Mann, Murray and Ramond, Pierre and Slansky,
+                        Richard",
+      COMtitle          = "{Complex Spinors and Unified Theories}",
+      booktitle      = "{Supergravity Workshop Stony Brook, New York, September
+                        27-28, 1979}",
+      journal        = "Conf. Proc.",
+      volume         = "C790927",
+      year           = "1979",
+      pages          = "315-321",
+      eprint         = "1306.4669",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "PRINT-80-0576",
+      SLACcitation   = "%%CITATION = ARXIV:1306.4669;%%"
+}
+@article{Yanagida1979,
+author = {Yanagida, T},
+journal = {Proc. of the Workshop on Unified Theory and the Baryon Number of the Universe Japan},
+year = {1979}
+}
+@article{Cremonesi2013,
+      author         = "Cremonesi, O. and Pavan, M.",
+      COMtitle          = "{Challenges in Double Beta Decay}",
+      journal        = "Adv. High Energy Phys.",
+      volume         = "2014",
+      year           = "2014",
+      pages          = "951432",
+      doi            = "10.1155/2014/951432",
+      eprint         = "1310.4692",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1310.4692;%%"
+}
+@article{kamland2003,
+  COMtitle = {{First Results from KamLAND: Evidence for Reactor
+                  Antineutrino Disappearance}},
+  author = {Eguchi, K. and others},
+  journal = {Phys.~Rev.~Lett.},
+  volume = {90},
+  issue = {2},
+  pages = {021802},
+  numpages = {6},
+  year = {2003},
+  month = {Jan},
+  publisher = {American Physical Society},
+  OPTdoi = {10.1103/PhysRevLett.90.021802},
+  OPTurl = {http://link.aps.org/doi/10.1103/PhysRevLett.90.021802}
+}
+@article{SuperK2002,
+      author         = "Fukuda, S. and others",
+      COMtitle          = "{Determination of solar neutrino oscillation parameters using 1496 days of Super-Kamiokande I data}",
+      collaboration  = "Super-Kamiokande",
+      journal        = "Phys.~Lett.~B",
+      volume         = "539",
+      pages          = "179-187",
+      OPTdoi            = "10.1016/S0370-2693(02)02090-7",
+      year           = "2002",
+      eprint         = "hep-ex/0205075",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0205075;%%",                        
+}
+@article{SuperK1998,
+  COMtitle = {{Measurements of the Solar Neutrino Flux from
+                  Super-Kamiokande's First 300 Days}},
+ author = {Fukuda, Y. and others},
+  journal = {Phys.~Rev.~Lett.},
+  volume = {81},
+  issue = {6},
+  pages = {1158--1162},
+  numpages = {0},
+  year = {1998},
+  month = {Aug},
+  publisher = {American Physical Society},
+  OPTdoi = {10.1103/PhysRevLett.81.1158},
+  OPTurl = {http://link.aps.org/doi/10.1103/PhysRevLett.81.1158}
+}
+@article{SNO2001,
+  COMtitle = {{Measurement of the Rate of $\nu_{e}+d\rightarrow p+p+e^{-}$
+                  Interactions Produced by $^{8}B$ Solar Neutrinos at
+                  the Sudbury Neutrino Observatory}},
+  author = {Ahmad, Q. R. and others},
+  journal = {Phys.~Rev.~Lett.},
+  volume = {87},
+  issue = {7},
+  pages = {071301},
+  numpages = {6},
+  year = {2001},
+  month = {Jul},
+  publisher = {American Physical Society},
+  OPTdoi = {10.1103/PhysRevLett.87.071301},
+  OPTurl = {http://link.aps.org/doi/10.1103/PhysRevLett.87.071301}
+}
+@article{SNO2002,
+  COMtitle = {Direct Evidence for Neutrino Flavor Transformation from
+                  Neutral-Current Interactions in the Sudbury Neutrino
+                  Observatory},
+  author = {Ahmad, Q. R. and others},
+  journal = {Phys.~Rev.~Lett.},
+  volume = {89},
+  issue = {1},
+  pages = {011301},
+  numpages = {6},
+  year = {2002},
+  month = {Jun},
+  publisher = {American Physical Society},
+  OPTdoi = {10.1103/PhysRevLett.89.011301},
+  OPTurl = {http://link.aps.org/doi/10.1103/PhysRevLett.89.011301}
 }
