Adding new Figs

--- a/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
+++ b/SphericalHarmonicsPaper/NIMA/30-SphericalHarmonics.tex
@@ -154,7 +154,8 @@ The calculation of the normalized power spectrum, $S_I$, above, assumes that the
 
 \begin{figure*}[h]
   \centering
-  \includegraphics[width=0.95\textwidth]{SphH_transform_sketch.JPG}
+%  \includegraphics[width=0.95\textwidth]{SphH_transform_sketch.JPG}
+  \includegraphics[width=0.95\textwidth]{SphH_transform.pdf}
   \caption{Coordinate transformation applied to events that are
     off-center. Solid circle schematically shows actual detector
     boundaries. Dotted circle shows a new sphere of radius R$=$6.5~m
