--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -53,6 +53,40 @@ PE arrival time distribution between $^{130}$Te 0{\nbb} decays and
 $^{10}$C events. The time profile of the scintillation photons can be used
 to separate signal from $^{10}$C events.
 
+Samples of early photons are compared on Fig.~\ref{fig:NPhotDist_C10}
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130.pdf}
+  \includegraphics[width=0.45\textwidth]{hMomNPhot_C10.pdf}
+  \caption{Early photons. Number of Cherenkov (\emph{dashed red line}), 
+    scintillation
+    (\emph{dotted blue line}), and total (\emph{solid black line}) PEs
+    for the simulation of 1000 $^{130}$Te 0{\nbb} decay (left panel)
+    and of 648 $^{10}$C (\emph{right panel}) events (1000 $^{10}$C events was 
+    generated, but selected only those that has total energy deposition in the 
+    detector in the range between 2.1 and 2.9~MeV).}
+\label{fig:NPhotDist_C10}
+\end{figure*}
+
+Comparison of $S_0$ and $S_1$ distributions between 0{\nbb} decay and
+$^{10}$C events is shown in Fig.~\ref{fig:S_vs_energy_C10}.
+
+\begin{figure*}[h]
+\centering
+\includegraphics[width=0.49\textwidth]{hS0_C10.pdf}
+\includegraphics[width=0.49\textwidth]{hS1_C10.pdf}
+\caption{$S_0$ (\emph{left}) and $S_1$ (\emph{right}) distributions
+  for events with different event topologies. $^{130}$Te, $^{82}$Se 0{\nbb} 
+  decays compared with $^{8}$B and $^{10}$C events. The simulation is done 
+  for events with the vertex in the center of the detector. $^{8}$B events 
+  are implemented as 2.529~MeV or 2.995~MeV electrons with initial direction 
+  along $x$-axis. $^{10}$C events are selected in the energy range between 2.1 
+  and 2.9~MeV. Perfect vertex reconstruction - true vertex position is used. 
+  Time cut of 33.5~ns on the photon arrival time is applied.}
+\label{fig:S_vs_energy}
+\end{figure*}
+
 
 \begin{figure}[h]
   \centering
