Adding comparison plots for total Nphot beween Te130 and C10

--- a/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
+++ b/SphericalHarmonicsPaper/NIMA/60-Appendix.tex
@@ -69,6 +69,39 @@ Samples of early photons are compared on Fig.~\ref{fig:NPhotDist_C10}
 \label{fig:NPhotDist_C10}
 \end{figure*}
 
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_VtxSmear0cm_VtxShiftX0cm_33p5ns_center.pdf}
+  \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay 
+    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV. 
+    Events originated at the center of the sphere.
+    Perfect vertex reconstruction - true vertex position is used. Time cut of 
+    33.5~ns on the photon arrival time is applied.}
+\label{fig:NPhot_compare_central}
+\end{figure*}
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_VtxSmear0cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay
+    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV.
+    Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+    Perfect vertex reconstruction - true vertex position is used.}
+\label{fig:NPhot_compare_rndVtx_noSmear}
+\end{figure*}
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=0.95\textwidth]{hMomNPhot_Te130vsC10_VtxSmear3cm_VtxShiftX0cm_momDT1p0ns_rndVtx_3p0mSphere.pdf}
+  \caption{Comparison of total number of early photons between $^{130}$Te 0{\nbb} decay
+    and $^{10}$C events with energy deposition in the range between 2.1 and 2.9~MeV.
+    Verticies are uniformly distributed within the fiducial volume, $R<3$~m.
+    Vetrex is smeared with 3~cm resolution.}
+\label{fig:NPhot_compare_rndVtx_Smear3cm}
+\end{figure*}
+
+
+
 Comparison of $S_0$ and $S_1$ distributions between 0{\nbb} decay and
 $^{10}$C events is shown in Fig.~\ref{fig:S_vs_energy_C10}.
 
